fix: popup content z-index

--- a/src/components/UI/Popup/Popup.styl
+++ b/src/components/UI/Popup/Popup.styl
@@ -24,7 +24,7 @@
   transform-origin top center
   transform scale(.5)
   transition all .1s ease-out
-  z-index 1
+  z-index 10
 
   &.open
     transform scale(1)
